Fix WPGlobus website ULR.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     {
       "name": "The WPGlobus Team",
       "email": "support@wpglobus.com",
-      "homepage": "http://www.wpglobus.com/",
+      "homepage": "https://wpglobus.com/",
       "role": "Developer"
     }
   ],
