--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "GPLv2+",
   "homepage": "https://wpglobus.com",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.3",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-cssmin": "^1.0.1",
@@ -29,5 +29,8 @@
     "grunt-writefile": "^0.1.4",
     "load-grunt-config": "^0.19.2",
     "load-grunt-tasks": "^3.3.0"
+  },
+  "dependencies": {
+    "grunt-cli": "^1.2.0"
   }
 }
